@@ -19,6 +19,9 @@ Summary of important user-visible changes for version 4.2:
     argument is requested, instead the vector or array of interpolated values
     is always returned for Matlab compatibility.
 
+ ** The surfnorm function now returns unnormalized (magnitude != 1) normal
+    vectors for compatibility with Matlab.
+
  ** Other new functions added in 4.2:
 
       psi
